tests/NormalTests/paczka1/fuzzy1/98360479.err
Error in line 1: z6pCm S577 42,9
Error in line 2: xClF6 S577 27,0
Error in line 7: u8LppBMFg S577 87,2
Error in line 13: u8LppBMFg S715 40,9
Error in line 29: pcl44qFrHHV S715 44,6
Error in line 30: pcl44qFrHHV S70 20,5
Error in line 25: xClF6 S577 41,0
